# gzippier

./: .gitignore  .gitmodules  Makefile.am  NEWS  README  README-hacking  TODO  bootstrap  commit  configure.ac  zip.c
benchmarks/: Makefile.am  bench.sh  benchmark.sh  benchmark_file.sh  get.sh  get_gzip.sh  gzip  input  old_gzip  run_benchmarks.sh
lib/: .gitignore
src/: Makefile.am  bits.c  deflate.c  dfltcc.c  gzip  gzip.c  gzip.h  inflate.c  para.c  parallel.c  parallel.h  tailor.h  test.txt  trees.c  unlzh.c  unlzw.c  unpack.c  unzip.c  util.c  version.c  zip.c
src/util/: buffer.c  buffer.h  job.c  job.h  thread.c  thread.h  util.c
testing/: #bench.sh#  bench.sh  benchmark.sh  help  original.txt  test.txt
tests/: Makefile.am  helin-segv  null-suffix-clobber  parallel  pkzip  timestamp  trailing-nul
zlib_interface_test/: Makefile  zpipe  zpipe.c
